[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', "numpy"]

[project]
name = "test_meson"
version = "1.0"
description = "example python project with fortran code and meson build system."
authors = [
    {name = "Johann Mattiat", email = "johann.mattiat@gmail.com"}
]
requires-python = ">=3.9"
readme = "README.rst"
license = {file = "UNLICENSE"}
dependencies = [
    "meson-python",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]
